Fix width jumping for settings

--- a/src/editor/style-cards/editor.scss
+++ b/src/editor/style-cards/editor.scss
@@ -850,14 +850,6 @@ body .maxi-style-cards__popover {
 		z-index: 0;
 	}
 
-	.maxi-typography-control .maxi-typography-control__weight .maxi-select-control__input {
-		font-size: 13px !important;
-	}
-
-	.maxi-typography-control .maxi-typography-control__spacing-controls .maxi-typography-control__line-height {
-		margin-right: 3px !important;
-	}
-
 	.maxi-advanced-number-control__input-wrapper {
 		width: 63px !important;
 	}
